# hw3-paulverdickt

./: .gitignore  Makefile  README.md  index.md  myst.yml  pyproject.toml
.github/workflows/: myst-pages.yml
.ipynb_checkpoints/: README-checkpoint.md  ai_documentation-checkpoint.txt  myst-checkpoint.yml
_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
_build/site/content/: hw03-description.json  index.json  losc-event-tutorial.json  readme.json
content/: index.md
ligotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ligotools/.ipynb_checkpoints/: utils-checkpoint.py
ligotools/tests/: test_readligo.py
